AM_CPPFLAGS = -I$(top_srcdir)/lib
AM_CFLAGS = $(GTK_CFLAGS) -Wall
AM_LDFLAGS = $(GTK_LIBS) -avoid-version -module -shared

libunitygtkmoduledir = $(GTK_MODULE_DIR)
libunitygtkmodule_LTLIBRARIES = libunitygtkmodule.la

libunitygtkmodule_la_SOURCES = main.c
libunitygtkmodule_la_LDFLAGS = $(top_builddir)/lib/libunitygtk$(GTK_VERSION)parser.la
